--- a/abc_comprehensivecba_gmm.tex
+++ b/abc_comprehensivecba_gmm.tex
@@ -110,7 +110,9 @@ q :=  {\bm{m} \left( \bm{\theta}_{j} \right)}^{'} W ^{-1} {\bm{m} \left( \bm{\th
 
 \noindent It is of specific interest for us to weight the variance of the moments in \eqref{eq:wloss} because, in order to satisfy Assumption~\ref{ass:contain} (Support Conditions), we pool different auxiliary data sources (CNLSY, PSID and NLSY79), as we explain in the main text. $W ^{-1} $ is not restricted to be diagonal so that these moments are allowed to correlate. Iterated, feasible procedures to obtain an estimate of $W ^{-1}$ jointly with the parameters of interest guarantee efficiency and are straightforward to implement \citep{Hansen_1982_Econometrica,Amemiya_1985_advanced}.
 
-\item \textbf{Serial correlation.} Assumption~\ref{ass:exog} (Exogeneity) does not rule out serial correlation of $\varepsilon^d_{n,j,a}$. To account for this, it is possible to bootstrap the two steps described before to obtain the standard errors of the estimates of $ \bm{\theta}_{j,a}$. To do that, we resample the auxiliary sample with replacement at the individual level. This gives us a new (re-sampled) panel dataset in each bootstrapped sample. Information on the entire history of each individual is obtained in each re-sample. Thus, criterion in \eqref{eq:wloss} is minimized with observations that are all allow to serially correlate at the individual level. The bootstrap procedure in the experimental sample is analogous.
+\item \textbf{Serial correlation.} Assumption~\ref{ass:exog} (Exogeneity) does not rule out serial correlation of $\varepsilon^d_{n,j,a}$. To account for this, it is possible to bootstrap the two steps described before to obtain the standard errors of the estimates of $ \bm{\theta}_{j,a}$. To do that, we resample the auxiliary sample with replacement at the individual level. This gives us a new (re-sampled) panel dataset in each bootstrapped sample. Information on the entire history of each individual is obtained in each re-sample. Thus, criterion in \eqref{eq:wloss} is minimized with observations that are all allowed to serially correlate at the individual level.\\
+
+\noindent The bootstrap procedure in the experimental sample is analogous.
 
 \end{enumerate}
 
