--- a/data/abccare/extensions/fam-merge/README
+++ b/data/abccare/extensions/fam-merge/README
@@ -1,6 +1,6 @@
 Author	Joshua Shea
 Date	July 7, 2016
 
-This folder should contain the dataset abc-fam-merge.dta data from:
+This folder should contain the dataset abc-fam-merge.dta (merged with USC data) data from:
 
 smb://athens.uchicago.edu/klmshare/Data_Central/Abecedarian/data/ABC-CARE/extensions/fam-merg
